luci-theme-rosy: Repair head and body alignment bugs.

--- a/themes/luci-theme-rosy/htdocs/luci-static/rosy/cascade.css
+++ b/themes/luci-theme-rosy/htdocs/luci-static/rosy/cascade.css
@@ -2552,6 +2552,9 @@ input[name="nslookup"] {
 }
 
 @media screen and (max-width: 1400px) {
+	.logged-in header {
+		width: calc(100% - 230px - 2rem);
+	}
 	.logged-in .main-right {
 		width: calc(100% - 230px);
 	}
